@@ -724,6 +724,18 @@ SCIP_RETCODE SCIPtreeCreateProbingNode(
    SCIP_LP*              lp                  /**< current LP data */
    );
 
+/** sets the LP state for the current probing node */
+extern
+SCIP_RETCODE SCIPtreeSetProbingLPState(
+   SCIP_TREE*            tree,               /**< branch and bound tree */
+   BMS_BLKMEM*           blkmem,             /**< block memory */
+   SCIP_LP*              lp,                 /**< current LP data */
+   SCIP_LPISTATE*        lpistate,           /**< LP state information (like basis information) */
+   SCIP_LPINORMS*        lpinorms,           /**< LP pricing norms information */
+   SCIP_Bool             primalfeas,         /**< primal feasibility when LP state information was stored */
+   SCIP_Bool             dualfeas            /**< dual feasibility when LP state information was stored */
+   );
+
 /** loads the LP state for the current probing node */
 extern
 SCIP_RETCODE SCIPtreeLoadProbingLPState(
